[package]
name = "yamf-hash"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = ["varu64/std", "hex/std"]

[dependencies]
arrayvec = "0.5.2"
blake2b_simd = { version = "0.5.11", default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false , features = ["derive"] }
serde_derive = { version = "1.0", default-features = false }
static_assertions = "0.3"
varu64 = { version ="0.6.2", default-features = false } 
